# Programmiersprachen-Aufgabe-1

source/: Aufgabe 1.16.cpp  Aufgaben-1.8-1.15.cpp  Aufgaben-1.8-1.15.cpp~  CMakeLists.txt
