add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_fancy_library)

add_executable(tests tests.cpp)

# Kommentieren Sie die folgenden Zeilen für die Aufgabe `mileToKilometer` aus
#add_executable(mileToKilometer mileToKilometer.cpp)
add_executable(Aufgabe-1.16 Aufgabe-1.16.cpp)
add_executable(Aufgaben-1.8-1.15 Aufgaben-1.8-1.15.cpp)




